내 정보 조회 기능 추가