@@ -3,28 +3,29 @@ package com.playdata.pdfolio.member.domain.response;
 import com.playdata.pdfolio.global.type.SkillType;
 import com.playdata.pdfolio.member.domain.entity.Member;
 import com.playdata.pdfolio.member.domain.entity.MemberSkill;
+import com.playdata.pdfolio.member.domain.entity.MemberStatus;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
-public record MemberResponse(
+public record MemberDetailResponse(
         Long id,
-        String providerName,
+        String provider,
         String nickname,
         String imageUrl,
-        List<String> skills
+        MemberStatus status,
+        List<SkillType> skills
 ) {
 
-    public static MemberResponse from(Member member){
-        return new MemberResponse(
+    public static MemberDetailResponse fromEntity(Member member){
+        return new MemberDetailResponse(
                 member.getId(),
                 member.getProvider(),
                 member.getNickname(),
                 member.getImageUrl(),
+                member.getStatus(),
                 member.getSkills().stream()
                         .map(MemberSkill::getSkillType)
-                        .map(SkillType::getName)
-                        .collect(Collectors.toList())
+                        .toList()
         );
     }
 }
